--- a/index.html
+++ b/index.html
@@ -218,7 +218,6 @@
                                 Loren ipsum is a simple dummy text.
                                 Loren ipsum is a simple dummy text.
                                 Loren ipsum is a simple dummy text.
-                                <a href="http://www.fimyco.nl/site2">click hier</a> voor mijn andere site.
                             </p>
                         </div>
                     </div>
@@ -231,29 +230,30 @@
                                       <div class="col-md-6 col-sm-6 col-xs-12">
                                         <div class="progress-soft">
 
-                                          <div class="progressbar" data-perc="3">
-                                            <div class="bar"><span></span></div>
-                                            <div class="soft-skills"> Contact </div>
+                                          <div class="progressbar" data-perc="80">
+                                            <div class="bar color4"><span></span></div>
+                                            <div class="soft-skills"> 21stcenturyskills </div>
                                             <div class="label"><span></span></div>
                                           </div>
 
-                                          <div class="progressbar" data-perc="5">
+                                          <div class="progressbar" data-perc="75">
                                             <div class="bar color2"><span></span></div>
                                             <div class="soft-skills"> Helpen </div>
                                             <div class="label"><span></span></div>
                                           </div>
 
-                                          <div class="progressbar" data-perc="20">
+                                          <div class="progressbar" data-perc="57">
+                                            <div class="bar"><span></span></div>
+                                            <div class="soft-skills"> Contact </div>
+                                            <div class="label"><span></span></div>
+                                          </div>
+
+                                          <div class="progressbar" data-perc="40">
                                             <div class="bar color3"><span></span></div>
                                             <div class="soft-skills"> Ondernemend </div>
                                             <div class="label"><span></span></div>
                                           </div>
 
-                                          <div class="progressbar" data-perc="100">
-                                            <div class="bar color4"><span></span></div>
-                                            <div class="soft-skills"> Omgang mensen </div>
-                                            <div class="label"><span></span></div>
-                                          </div>
                                         </div>
                                       </div>
                                   </div>
@@ -275,6 +275,75 @@
                 </div> <!-- /container -->
             </div>
         </div>
+
+        <!-- Main portfolio for a primary marketing message or call to action -->
+        <div id="portfolio_area" class="light-bg wrap">
+            <div class="container">
+                <div class="row">
+                    <div class="portfolio">
+                        <div class="col-md-4 col-sm-6 col-xs-12">
+
+                            <div class="portfolio-item">
+                                <h2>Opdrachten gedaan</h2>
+                                <p>
+                                  Loren ipsum is a simple dummy text.
+                                  Loren ipsum is a simple dummy text.
+                                  Loren ipsum is a simple dummy text.
+                                  Loren ipsum is a simple dummy text.
+                                  Loren ipsum is a simple dummy text.
+                                  Loren ipsum is a simple dummy text.
+                                </p>
+                            </div>
+
+                        </div>
+
+                        <div class="col-md-4 col-sm-6 col-xs-12">
+                            <div class="portfolio-item">
+                              <a href="https://www.facebook.com/Fanclub.BobbyBos"> <img src="img/v1.png" alt="" /></a>
+                            </div>
+
+                        </div>
+
+                        <div class="col-md-4 col-sm-6 col-xs-12">
+
+                            <div class="portfolio-item">
+                              <a href="http://www.millingcompanyeurope.com"> <img src="img/mce.gif" alt="" /></a>
+                            </div>
+
+                        </div>
+
+                        <div class="col-md-4 col-sm-6 col-xs-12">
+
+                            <div class="portfolio-item">
+                              <a href="http://www.subsidise.it">  <img src="img/1.png" alt="" /></a>
+                            </div>
+
+                        </div>
+
+                        <div class="col-md-4 col-sm-6 col-xs-12">
+
+                            <div class="portfolio-item">
+                                <img class="logo-hw" src="img/harcologo.png" alt="" />
+                            </div>
+
+                        </div>
+
+                        <!-- <div class="col-md-4 col-sm-6 col-xs-12">
+
+                            <div class="portfolio-item">
+                                <img src="img/pf5.jpg" alt="" />
+                            </div>
+
+                        </div> -->
+
+                    </div>
+                </div>
+
+
+
+            </div>
+        </div>
+
 
         <section class="footer_area">
 
