--- a/index.html
+++ b/index.html
@@ -46,18 +46,17 @@
             <div class="containner">
                 <div class="row">
                     <div class="col-md-6 col-sm-6 col-xs-12 info">
-                        <h2>Hello</h2>
-                        <h3>Harco Wittendorp</h3>
+                        <!-- <h2>Wie ik ben?</h2> -->
+                        <h3>Wie ik ben?</h3>
                         <p class="details">
-                          Ben een junior web developer in opleiding bij Code Gorilla.
-                          Ik ben 21 jaar oud ben geboren in Emmen.
-                          Heb totaal 7 jaar in de horeca gewerkt/stage.
-                          Daar naast heb ik mijn vader altijd mee geholpen bij zijn eigen bedrijf.
-                          Nu heb ik de kans gekregen om een studie bij Code Gorilla te volgen.
-                          Hier ben ik Code Gorilla ook erg dankbaar voor dat ik deze kans heb gekregen.
-                          Voor mij is deze opleiding zo super in elkaar gezet dat ik deze kans ook met 2 handen aan heb gepakt.
+                          Ik ben Harco Wittendorp, 21 jaar en geboren in Emmen.
+                          Momenteel ben ik woonachtig in Klazienaveen.
+                          Van 2009 tot en met 2016 heb ik in de horeca en bij Transportbedrijf Louis Wittendorp B.V. gewerkt.
+                          Op 18 april 2017 ben ik aan de slag gegaan bij Code Gorilla,
+                          waar ik op dit moment word omgeschoold tot junior web developer.
+                          Ik ben zeer dankbaar dat deze kans zich heeft voorgedaan en heb deze met beide handen aangegrepen.
                         </p>
-                        <a href="mailto:harco.wittendorp@hotmail.com" class="btn btn-default" type="submit">Mail</a>
+                        <a href="mailto:harco.wittendorp@hotmail.com" class="btn btn-default" type="submit">Mail Now</a>
                     </div>
 
                     <div class="col-md-6 col-sm-6 col-xs-12">
@@ -78,16 +77,12 @@
                             <div class="portfolio-item">
                                 <h2>Hardskills</h2>
                                 <p>
-                                  Toen ik begon aan deze opleiding had ik geen enkele voor kennis.
-                                  Voor mij persoonlijk is deze opleiding super goed voor mijn persoonlijke groei.
-                                  Waar door ik ook heel veel heb geleerd van coderen zodat ik straks als Web Develiper kan werken.
-                                  Maar ook heb ik heel veel geleerd om te pitchen en social skill's.
-                                  Voor mij betekend deze opleiding ook heel veel en ik hoop dat meerdere mensen deze kans zullen krijgen.
-                                  Vind het ook super leuk dat ze ons heel vaak op andere wegen willen drukken.
-                                  maar je moet er door heen kijken en de data die ze op je gooien moet filteren.
-                                  Waar ik op dit moment sta vind ik persoonlijk nog laag maar als ik kijk waar ik al ben gekomen in 6 weken.
-                                  Verwacht en hoop ik binnen 1 jaar makkelijk op niveau mee te kunnen draaien in het bedrijfs leven.
-                                  Graag zie ik mezelf dan als coach en leren om manager te kunnen worden in de toekomst.
+                                  Bij aanvang van de opleiding had ik geen kennis van de aspecten die in de afgelopen maanden aan bod zijn gekomen.
+                                  Ik ben van mening dat deze opleiding tot nu toe heel goed is geweest voor mijn ontwikkeling tot web developer.
+                                  Ik heb gedurende de eerste periode van de opleiding veel kennis opgedaan.
+                                  Naast de skills die noodzakelijk zijn voor het goed uit kunnen oefenen van de functie van web developer,
+                                  heb ik ook onder andere mijn presentatievaardigheden weten te verbeteren.
+                                  De komende periode hoop ik deze stijgende lijn voort te kunnen zetten en mij verder te ontwikkelen tot een goede (senior) web developer.
                                 </p>
 
                             </div>
@@ -114,13 +109,13 @@
                                             <div class="label"><span></span></div>
                                           </div>
 
-                                          <div class="progressbar" data-perc="13">
+                                          <div class="progressbar" data-perc="23">
                                             <div class="bar color3"><span></span></div>
-                                            <div class="skill-harco"> Wordpress </div>
+                                            <div class="skill-harco"> Javascript </div>
                                             <div class="label"><span></span></div>
                                           </div>
 
-                                          <div class="progressbar" data-perc="5">
+                                          <div class="progressbar" data-perc="15">
                                             <div class="bar color4"><span></span></div>
                                             <div class="skill-harco"> Design </div>
                                             <div class="label"><span></span></div>
@@ -152,20 +147,20 @@
 
 							<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="false">
 								<ol class="carousel-indicators">
-									<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+									<!-- <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 									<li data-target="#carousel-example-generic" data-slide-to="1"></li>
 									<li data-target="#carousel-example-generic" data-slide-to="2"></li>
-									<li data-target="#carousel-example-generic" data-slide-to="3"></li>
+									<li data-target="#carousel-example-generic" data-slide-to="3"></li> -->
 
 								</ol>
 								<div class="carousel-inner" role="listbox">
 
 									<div class="item active">
-										<p>remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-										<h4>Manik Boss</h4>
-										<span>Private Studio</span>
+										<!-- <p>remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p> -->
+										<!-- <h4>hackathon</h4> -->
+										<!-- <span>Private Studio</span> -->
 
-									</div>
+									<!-- </div>
 
 									<div class="item">
 										<p>remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
@@ -186,7 +181,7 @@
 										<h4>Nazmul hasan</h4>
 										<span>Private Studio</span>
 
-									</div>
+									</div> -->
 
 
 
@@ -212,12 +207,13 @@
                         <div class="main_contact">
                             <h1>Softskills</h1>
                             <p>
-                                Loren ipsum is a simple dummy text.
-                                Loren ipsum is a simple dummy text.
-                                Loren ipsum is a simple dummy text.
-                                Loren ipsum is a simple dummy text.
-                                Loren ipsum is a simple dummy text.
-                                Loren ipsum is a simple dummy text.
+                              Ik ben een sociaal persoon die meeleeft met de mensen om mij heen.
+                              Ook stel ik de belangen van een ander boven de mijne.
+                              Daarnaast ben ik vrolijk en nuchter en houd ik niet van het leren uit boeken.
+                              Ik leer door te doen, waardoor ik de hierboven genoemde hardskills heb aangeleerd.
+                              In groepsverband werken vind ik prettig, maar ik kan ook goed in mijn eentje opereren.
+                              In groepsverband vind ik het prettig wanneer iedereen zich op zijn gemak voelt.
+                              Ik zal er dan ook alles aan doen om dit voor elkaar te krijgen.
                             </p>
                         </div>
                     </div>
@@ -230,27 +226,27 @@
                                       <div class="col-md-6 col-sm-6 col-xs-12">
                                         <div class="progress-soft">
 
-                                          <div class="progressbar" data-perc="80">
+                                          <div class="progressbar" data-perc="47">
                                             <div class="bar color4"><span></span></div>
-                                            <div class="soft-skills"> 21stcenturyskills </div>
+                                            <div class="soft-skills">21stcenturyskills</div>
                                             <div class="label"><span></span></div>
                                           </div>
 
                                           <div class="progressbar" data-perc="75">
                                             <div class="bar color2"><span></span></div>
-                                            <div class="soft-skills"> Helpen </div>
+                                            <div class="soft-skills">Sociaal</div>
                                             <div class="label"><span></span></div>
                                           </div>
 
                                           <div class="progressbar" data-perc="57">
                                             <div class="bar"><span></span></div>
-                                            <div class="soft-skills"> Contact </div>
+                                            <div class="soft-skills">Communicatie</div>
                                             <div class="label"><span></span></div>
                                           </div>
 
                                           <div class="progressbar" data-perc="40">
                                             <div class="bar color3"><span></span></div>
-                                            <div class="soft-skills"> Ondernemend </div>
+                                            <div class="soft-skills">Ondernemend</div>
                                             <div class="label"><span></span></div>
                                           </div>
 
@@ -284,15 +280,15 @@
                         <div class="col-md-4 col-sm-6 col-xs-12">
 
                             <div class="portfolio-item">
-                                <h2>Opdrachten gedaan</h2>
-                                <p>
+                                <h2>Opdrachten</h2>
+                                <!-- <p>
                                   Loren ipsum is a simple dummy text.
                                   Loren ipsum is a simple dummy text.
                                   Loren ipsum is a simple dummy text.
                                   Loren ipsum is a simple dummy text.
                                   Loren ipsum is a simple dummy text.
                                   Loren ipsum is a simple dummy text.
-                                </p>
+                                </p> -->
                             </div>
 
                         </div>
